--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,17 @@ before_deploy:
 jobs: 
   include:
     - stage: test
-      name: test
       if: |
         branch = prod AND \
         type = push
       script: 
         - "yarn lint"
     - stage: deploy
-      name: deploy
       script: 
         - "yarn build:prod"
       deploy:
+        on: 
+          branch: "prod"
         provider: "s3"
         access_key_id: "${AWS_ACCESS_KEY}"
         secret_access_key: "${AWS_SECRET_KEY}"
