--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ jobs:
         provider: "s3"
         access_key_id: "${AWS_ACCESS_KEY}"
         secret_access_key: "${AWS_SECRET_KEY}"
-        bucket: "S3 Bucket"
+        bucket: "${AWS_S3_BUCKET}"
         local_dir: "dist"
         skip_cleanup: true
