--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 
-node_js: 
+node_js:
   - "10"
 
 branches:
   only:
-    - master
+    - lab
     - staging
     - prod
 
@@ -14,30 +14,21 @@ cache: yarn
 install:
   - yarn
 
-jobs: 
-  include:
-    - stage: test
-      name: test
-      if: |
-        branch =~ /(master|staging|prod)/ AND \
-        type = pull_request
-      script: 
-        - "yarn lint"
-    - stage: deploy
-      name: deploy
-      if: |
-        branch =~ /(staging|prod)/ AND \
-        type = push
-      script: 
-        - "yarn build:${TRAVIS_BRANCH}"
-      deploy:
-        provider: "s3"
-        access_key_id: "${AWS_ACCESS_KEY}"
-        secret_access_key: "${AWS_SECRET_KEY}"
-        bucket: "${AWS_S3_BUCKET}"
-        local_dir: "dist"
-        skip_cleanup: true        
-        on: 
-          branch: 
-            - staging
-            - prod
+before_script: chmod -R +x scripts
+
+script:
+  - ./scripts/test.sh
+  - ./scripts/build.sh
+
+deploy:
+  provider: "s3"
+  access_key_id: "${AWS_ACCESS_KEY}"
+  secret_access_key: "${AWS_SECRET_KEY}"
+  bucket: "${AWS_S3_BUCKET}"
+  local_dir: "dist"
+  skip_cleanup: true
+  on:
+    branch:
+      - lab
+      - staging
+      - prod
