--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ branches:
 cache: yarn
 
 before_install:
-  - if[[$TRAVIS_BRANCH == "master" ]]; then
+  - |
+    if [[$TRAVIS_BRANCH == "master"]]; then
       export BUILD_ENV=prod 
     fi
 
@@ -25,14 +26,14 @@ jobs:
         branch =~ /(master)/ AND \
         type = pull_request
       script:
-        - "yarn lint:${BUILD_ENV}"
+        - yarn lint:${BUILD_ENV}
     - stage: deploy
       name: deploy
       if: |
         branch =~ /(master)/ AND \
         type = push
       script:
-        - "yarn build:${BUILD_ENV}"
+        - yarn build:${BUILD_ENV}
       deploy:
         provider: "s3"
         access_key_id: "${AWS_ACCESS_KEY}"
