--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache: yarn
 
 before_install:
   - |
-    if [[$TRAVIS_BRANCH == "master"]]; then
+    if [[${TRAVIS_BRANCH} == "master"]]; then
       export BUILD_ENV=prod 
     fi
 
