--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,9 @@ branches:
 cache: yarn
 
 before_install:
-  - |
-    if [[${TRAVIS_BRANCH} == "master"]]; then
-      export BUILD_ENV=prod 
-    fi
+    - if [ $TRAVIS_BRANCH == "master" ]; then
+        export BUILD_ENV=prod
+      fi
 
 install:
   - yarn
